syntax = "proto3";
package pb;

option go_package = "./proto";

message TickData {
    // Basic info
    uint32 instrument_token = 1;
    int64 exchange_unix_timestamp = 2;
    double last_price = 3;
    uint32 open_interest = 4;
    uint32 volume_traded = 5;
    double average_trade_price = 6;
}

message BatchMetadata {
    int64 timestamp = 1;      // When this batch was created
    int32 batch_size = 2;     // Number of ticks in batch
    int32 retry_count = 3;    // Number of retry attempts for this batch
}

message TickBatch {
    repeated TickData ticks = 1;      // Array of tick data
    BatchMetadata metadata = 2;       // Metadata about this batch
}